--- a/index.html
+++ b/index.html
@@ -897,9 +897,9 @@ nav a,
 </a>
 
        <button
+  type="button"
   class="primary-btn"
   id="sayHiBtn"
-  onclick="showSayHi(event)"
 >
   Say Hi <span class="icon">👋</span>
 </button>
