--- a/auth.html
+++ b/auth.html
@@ -258,7 +258,7 @@ loginForm.onsubmit = async e => {
     }
 
     toast("Login successful ✅");
-    setTimeout(() => location.href = "index.html", 1200);
+    setTimeout(() => location.href = "links.html", 1200);
 
   } catch (err) {
     toast(err.message);
