--- a/auth.html
+++ b/auth.html
@@ -322,6 +322,13 @@ forgotBtn.onclick = async () => {
   } catch (err) {
     toast(err.message);
   }
+  import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+onAuthStateChanged(auth, (user) => {
+  if (user && user.emailVerified) {
+    location.replace("links.html");
+  }
+});
 };
 </script>
 
