--- a/links.html
+++ b/links.html
@@ -141,11 +141,11 @@ h2 {
   import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT.firebaseapp.com",
-    projectId: "YOUR_PROJECT_ID",
-    appId: "YOUR_APP_ID"
-  };
+  apiKey: "AIzaSyDr3YpouSddKSR-9PqKPHDSP1qfwNv-VBM",
+  authDomain: "irshad-website.firebaseapp.com",
+  projectId: "irshad-website",
+  appId: "1:513828028182:web:ceca5d1ac390d5ec731a37"
+};
 
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
