--- a/links.html
+++ b/links.html
@@ -132,7 +132,9 @@ h2 {
     <i class="ri-mail-line"></i> Email
   </a>
 
-  <button class="logout" onclick="logout()">Logout</button>
+  <button type="button" class="logout" onclick="logout()">
+  Logout
+</button>
 </div>
 
 <!-- 🔐 Firebase Auth Guard -->
